# growt-nemo

./: README.md  pyproject.toml
examples/: nemo_training_with_growt.py
growt_nemo/: __init__.py  callback.py  extractor.py
